[gd_scene load_steps=8 format=3 uid="uid://ba4fw7ad47dsc"]

[ext_resource type="Texture2D" uid="uid://dle7aehm2fse6" path="res://sprites/Mobile - Flappy Bird - General Sprites.png" id="1_0qobi"]
[ext_resource type="Script" path="res://Tubos/Tubos.gd" id="1_yy5ab"]
[ext_resource type="AudioStream" uid="uid://bvheypn2nwh3d" path="res://sound/coin.mp3" id="3_t2101"]
[ext_resource type="AudioStream" uid="uid://c85r816iq26la" path="res://sound/golpe.mp3" id="4_g3i4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gs1rw"]
size = Vector2(22, 201)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wg8d8"]
size = Vector2(22, 201)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ray21"]
size = Vector2(20, 45)

[node name="Tubos" type="Node2D" groups=["GrupoTubo"]]
script = ExtResource("1_yy5ab")
metadata/_edit_group_ = true

[node name="Tubo Arriba" type="Area2D" parent="."]
position = Vector2(0, -125)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tubo Arriba"]
scale = Vector2(1, 1.5)
texture = ExtResource("1_0qobi")
region_enabled = true
region_rect = Rect2(302, 0, 26, 135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tubo Arriba"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gs1rw")

[node name="Tubo Abajo" type="Area2D" parent="."]
position = Vector2(0, 125)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Tubo Abajo"]
rotation = 3.14159
scale = Vector2(1, 1.5)
texture = ExtResource("1_0qobi")
region_enabled = true
region_rect = Rect2(302, 0, 26, 135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tubo Abajo"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_wg8d8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ray21")

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t2101")
volume_db = -3.759

[node name="golpe" type="AudioStreamPlayer" parent="."]
process_mode = 4
stream = ExtResource("4_g3i4b")
volume_db = -3.759

[connection signal="body_entered" from="Tubo Arriba" to="." method="_on_tubo_arriba_body_entered"]
[connection signal="body_entered" from="Tubo Abajo" to="." method="_on_tubo_abajo_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
